overflow fixed

--- a/src/Screens/QuestionsScreen.css
+++ b/src/Screens/QuestionsScreen.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: center;
   color: rgb(22, 21, 21);
-  width: 96%;
+  width: 92%;
   height: fit-content;
   padding: 20px;
   top: 174px;
